cert-manager/cert-manager-lets-encrypt/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: default
spec:
  gatewayClassName: <GATEWAY_CLASS_NAME>
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: <subdomain.your-domain.com>
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: test-cert-tls
      allowedRoutes:
        namespaces:
          from: Same
